--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,8 @@
   <div class="slidecontainer">
     <input type="range" min="0" max="199" value="10" class="slider" id="time-slider">
   </div>
-  <svg id="plot-container" width="960" height="200"></svg><br>
+  <svg id="line-plot-container" width="960" height="200"></svg><br>
+  <svg id="bar-plot-container" width="960" height="50"></svg><br>
   <div id="svg-container"></div>
   <script src="index.ts"></script>
 
